BuildHughes/translation-tool/inputs/source_meta/objects/Hsvc_SwitchPaymentTypeBankCode__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>This is used in Billing - Switch Payment Type for getting the newly selected Bank&apos;s code.</description>
    <fields>
        <fullName>BankCodes__c</fullName>
        <label>BankCodes</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BankNames__c</fullName>
        <label>Bank Names</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Show_Contact_Bank_Error__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Show Contact Bank Error</label>
        <type>Checkbox</type>
    </fields>
    <label>Hsvc_SwitchPaymentTypeBankCode</label>
</CustomObject>